--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ label{
   width: 100%;
   height: 700px;
   position: relative;
-  background: url('../img/game-development.png') center;
+  background: url('../img/Logo-nuevo-acreditación.png') center;
   background-size: cover;
   overflow: hidden;
 }
